deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-lab4
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: postgres
        image: postgres:10.4
        imagePullPolicy: "IfNotPresent"
        ports:
          - containerPort: 5432
        volumeMounts:
          - mountPath: /var/lib/postgresql/data
            name: postgredb
      - name: back-end2
        image: sergueidb/lab4-6:master # sergueidb/rsoi-lab4:master #  public.ecr.aws/nginx/nginx:1.21 #
        ports:
          - containerPort: 8080
      volumes:
        - name: postgredb
          persistentVolumeClaim:
            claimName: pg-claim
