pg-admin-deployment.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: pgadmin
  labels:
    app: pgadmin
spec:
  selector:
    matchLabels:
      app: pgadmin
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: pgadmin
        tier: frontend
    spec:
      containers:
      - image: dpage/pgadmin4:latest
        name: pgadmin
        ports:
        - containerPort: 80
          name: pgadminport
